Changed books route to my-books, cleaned up some code and added books-review module

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -2,10 +2,10 @@
 <div class="container">
   <div class="admin-actions">
     <a routerLink="/admin/catalogs" class="btn mat-button" (click)="activeLink = '/admin/catalogs'" [ngClass]="{'active' : isActive('/admin/catalogs')}">קטלוגים</a>
-    <a routerLink="/admin/books" class="btn mat-button" [ngClass]="{'active' : isActive('/admin/books')}">ספרים</a>
-    <a routerLink="/admin/articles" class="btn mat-button" [ngClass]="{'active' : isActive('/admin/articles')}">מאמרים</a>
-    <a routerLink="/admin/critiques" class="btn mat-button" [ngClass]="{'active' : isActive('/admin/critique')}">ביקורת תערוכות</a>
-    <a routerLink="/admin/video-lectures" class="btn mat-button" [ngClass]="{'active' : isActive('/admin/video-lecture')}">הרצאות מוקלטות</a>
+    <a routerLink="/admin/books" class="btn mat-button" (click)="activeLink = '/admin/my-books'" [ngClass]="{'active' : isActive('/admin/my-books')}">ספרים</a>
+    <a routerLink="/admin/articles" class="btn mat-button" (click)="activeLink = '/admin/articles'" [ngClass]="{'active' : isActive('/admin/articles')}">מאמרים</a>
+    <a routerLink="/admin/critiques" class="btn mat-button" (click)="activeLink = '/admin/critiques'" [ngClass]="{'active' : isActive('/admin/critique')}">ביקורת תערוכות</a>
+    <a routerLink="/admin/video-lectures" class="btn mat-button" (click)="activeLink = '/admin/video-lectures'" [ngClass]="{'active' : isActive('/admin/video-lecture')}">הרצאות מוקלטות</a>
   </div>
   <div class="outlet">
     <router-outlet></router-outlet>
