--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -8,13 +8,16 @@
       <a routerLink="catalogs" [ngClass]="{'nav-link': true, 'active' : isActive('catalogs')}">קטלוגים</a>
     </li>
     <li class="nav-item">
-      <a routerLink="books" [ngClass]="{'nav-link': true, 'active' : isActive('books')}">ספרים</a>
+      <a routerLink="my-books" [ngClass]="{'nav-link': true, 'active' : isActive('my-books')}">ספרים</a>
     </li>
     <li class="nav-item">
       <a routerLink="critique" [ngClass]="{'nav-link': true, 'active' : isActive('critique')}">ביקורת תערוכות</a>
     </li>
     <li class="nav-item">
       <a routerLink="articles" [ngClass]="{'nav-link': true, 'active' : isActive('articles')}">מאמרים</a>
+    </li>
+    <li class="nav-item">
+      <a routerLink="books-review" [ngClass]="{'nav-link': true, 'active' : isActive('books-review')}">בקורת ספרים</a>
     </li>
     <li class="nav-item">
       <a routerLink="video-lecture" [ngClass]="{'nav-link': true, 'active' : isActive('video-lecture')}">הרצאות מוקלטות</a>
