--- a/src/app/admin/articles/articles.component.css
+++ b/src/app/admin/articles/articles.component.css
@@ -57,16 +57,16 @@ h4:hover {
 }
 
 .btn-add {
-  background: #BCE0A3;
+  background: var(--light-green);
   font-weight: bold;
   color: #343919;
 }
 
 .btn {
-  background: #EC6F6F;
+  background: var(--light-red);
 }
 
 .edit-btn {
-  background: #BCE0A3;
+  background: var(--light-green);
   color: #343919;
 }
