--- a/src/app/shared/modals/confirm.modal/confirm.modal.component.css
+++ b/src/app/shared/modals/confirm.modal/confirm.modal.component.css
@@ -7,7 +7,7 @@
 }
 
 .mat-dialog-title h3 {
-  background: #EC6F6F;
+  background: var(--light-red);
   color: #fff;
   text-align: center;
   line-height: 40px;
