Added book-review module in admin

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -5,6 +5,7 @@
     <a routerLink="/admin/books" class="btn mat-button" (click)="activeLink = '/admin/my-books'" [ngClass]="{'active' : isActive('/admin/my-books')}">ספרים</a>
     <a routerLink="/admin/articles" class="btn mat-button" (click)="activeLink = '/admin/articles'" [ngClass]="{'active' : isActive('/admin/articles')}">מאמרים</a>
     <a routerLink="/admin/critiques" class="btn mat-button" (click)="activeLink = '/admin/critiques'" [ngClass]="{'active' : isActive('/admin/critique')}">ביקורת תערוכות</a>
+    <a routerLink="/admin/book-reviews" class="btn mat-button" (click)="activeLink = '/admin/book-reviews'" [ngClass]="{'active' : isActive('/admin/book-reviews')}">בקורות</a>
     <a routerLink="/admin/video-lectures" class="btn mat-button" (click)="activeLink = '/admin/video-lectures'" [ngClass]="{'active' : isActive('/admin/video-lecture')}">הרצאות מוקלטות</a>
   </div>
   <div class="outlet">
