--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -17,7 +17,7 @@
       <a routerLink="articles" [ngClass]="{'nav-link': true, 'active' : isActive('articles')}">מאמרים</a>
     </li>
     <li class="nav-item">
-      <a routerLink="books-review" [ngClass]="{'nav-link': true, 'active' : isActive('books-review')}">בקורת ספרים</a>
+      <a routerLink="books-review" [ngClass]="{'nav-link': true, 'active' : isActive('books-review')}">בקורות</a>
     </li>
     <li class="nav-item">
       <a routerLink="video-lecture" [ngClass]="{'nav-link': true, 'active' : isActive('video-lecture')}">הרצאות מוקלטות</a>
