--- a/src/app/components/navigation/navigation.component.css
+++ b/src/app/components/navigation/navigation.component.css
@@ -1,34 +1,39 @@
-.container h2 {
-  text-align: center;
-  margin: 25px auto;
-}
-.bg-dark {
-  background: #262626;
-  display: flex;
-  width: 100%;
-  padding: 6px;
-}
-
-nav.navbar {
-  width: 85vw;
-  margin: 0 auto;
-  display: flex;
+:host {
+  height: 100%;
 }
 
 ul.navbar-nav {
   display: flex;
-  align-items: center;
-  padding-inline-start: 0;
+  flex-direction: column;
+  justify-content: space-between;
   list-style-type: none;
+  width: 224px;
+  padding-inline-start: 0;
+  /*border-top-style: solid;*/
+}
+
+@media only screen and (max-width: 735px) {
+  ul.navbar-nav {
+    min-height: 360px;
+  }
 }
 
 .nav-item {
-  margin-inline-start: 1em;
+  font-size: 24px;
+  line-height: 48px;
+  padding: 8px 0;
+  font-weight: 600;
+}
+
+@media only screen and (max-height: 800px) {
+  .nav-item {
+    font-size: 22px;
+    padding: 6px 0;
+  }
 }
 
 .navbar-brand {
   display: flex;
-  background: url('../../../assets/images/logo_figure.png') no-repeat;
   width: 170px;
   height: 90px;
   background-size: 52px 90px;
@@ -43,14 +48,48 @@ ul.navbar-nav {
 }
 
 
-a.nav-link {
-  color: #fff;
-  font-size: 20px;
-  text-decoration: double underline;
-  text-underline-offset: 8px;
-  font-family: 'Rubik', sans-serif;
+.nav-link {
+  color: black;
+  border-bottom: 3px solid #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
 }
 
-a.nav-link:hover, a.nav-link.active {
-  color: #C1DCEB;
+.active-chev {
+  display: none;
+}
+
+.nav-link.active {
+  border-bottom: 3px solid #000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-link:hover {
+  border-bottom: 3px solid #000;
+}
+
+.nav-link.active .active-chev,
+.nav-link:hover .active-chev {
+  display: block;
+  font-size: 24px;
+}
+
+.nav-link:visited {
+  color: black;
+}
+
+.nav-logo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 224px;
+  padding: 1em 0;
+}
+
+.nav-logo img {
+  width: 128px;
 }
