--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,30 +1,40 @@
-<div class="bg-dark">
-<nav class="navbar navbar-expand navbar-dark">
-  <div class="navbar-brand">
-    <a href="/"><img src="../../../assets/images/logo_text.png" alt="ויזואליק לוגו" title="ויזואליק לוגו"/></a>
-  </div>
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item">
-      <a routerLink="catalogs" [ngClass]="{'nav-link': true, 'active' : isActive('catalogs')}">קטלוגים</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="my-books" [ngClass]="{'nav-link': true, 'active' : isActive('my-books')}">ספרים</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="critique" [ngClass]="{'nav-link': true, 'active' : isActive('critique')}">ביקורת תערוכות</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="articles" [ngClass]="{'nav-link': true, 'active' : isActive('articles')}">מאמרים</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="books-review" [ngClass]="{'nav-link': true, 'active' : isActive('books-review')}">בקורות</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="video-lecture" [ngClass]="{'nav-link': true, 'active' : isActive('video-lecture')}">הרצאות מוקלטות</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="about" [ngClass]="{'nav-link': true, 'active' : isActive('about')}">אודות</a>
-    </li>
-  </ul>
-</nav>
+<ul class="navbar-nav mr-auto">
+  <li class="nav-item">
+    <div routerLink="catalogs" [ngClass]="{'nav-link': true, 'active' : isActive('catalogs')}">קטלוגים
+      <mat-icon class="active-chev">chevron_left</mat-icon>
+    </div>
+  </li>
+  <li class="nav-item">
+    <div routerLink="my-books" [ngClass]="{'nav-link': true, 'active' : isActive('my-books')}">ספרים
+      <mat-icon class="active-chev">chevron_left</mat-icon>
+    </div>
+  </li>
+  <li class="nav-item">
+    <div routerLink="critique" [ngClass]="{'nav-link': true, 'active' : isActive('critique')}">ביקורת תערוכות
+      <mat-icon class="active-chev">chevron_left</mat-icon>
+    </div>
+  </li>
+  <li class="nav-item">
+    <div routerLink="articles" [ngClass]="{'nav-link': true, 'active' : isActive('articles')}">מאמרים
+      <mat-icon class="active-chev">chevron_left</mat-icon>
+    </div>
+  </li>
+  <li class="nav-item">
+    <div routerLink="books-review" [ngClass]="{'nav-link': true, 'active' : isActive('books-review')}">בקורות
+      <mat-icon class="active-chev">chevron_left</mat-icon>
+    </div>
+  </li>
+  <li class="nav-item">
+    <div routerLink="video-lecture" [ngClass]="{'nav-link': true, 'active' : isActive('video-lecture')}">הרצאות מוקלטות
+      <mat-icon class="active-chev">chevron_left</mat-icon>
+    </div>
+  </li>
+  <li class="nav-item">
+    <div routerLink="about" [ngClass]="{'nav-link': true, 'active' : isActive('about')}">אודות
+      <mat-icon class="active-chev">chevron_left</mat-icon>
+    </div>
+  </li>
+</ul>
+<div class="nav-logo">
+  <img src="assets/images/Aldus.jpg" alt="">
 </div>
