Added design to components and admin components, site responsive in large desktop and laptop size

--- a/src/app/admin/critiques/critiques.component.css
+++ b/src/app/admin/critiques/critiques.component.css
@@ -11,6 +11,11 @@
   font-size: 28px;
 }
 
+.critiques-table {
+  overflow-y: scroll;
+  max-height: 600px;
+}
+
 mat-list.mat-list.mat-list-base.critiques-list {
   gap: 1em;
   display: flex;
