--- a/src/app/admin/articles/articles.component.css
+++ b/src/app/admin/articles/articles.component.css
@@ -49,6 +49,11 @@ h4:hover {
   width:350px;
 }
 
+.mat-table {
+  overflow-y: scroll;
+  max-height: 600px;
+}
+
 .mat-header-cell.actions, .mat-cell.actions,
 .mat-header-cell.date, .mat-cell.date {
   display: flex;
