--- a/src/app/admin/video-lectures/video-lectures.component.html
+++ b/src/app/admin/video-lectures/video-lectures.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 <div class="videos-container">
-  <mat-table #table [dataSource]="videos" class="mat-elevation-z4" matSort>
+  <mat-table #table [dataSource]="videos" class="videos-table mat-elevation-z4" matSort>
     <ng-container matColumnDef="title">
       <mat-header-cell *matHeaderCellDef class="title">כותרת</mat-header-cell>
       <mat-cell *matCellDef="let video" class="title">
