--- a/src/app/articles/articles.component.css
+++ b/src/app/articles/articles.component.css
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+}
+
 h3 {
   text-align: right;
   font-weight: bolder;
@@ -32,8 +36,14 @@ input::placeholder {
 }
 
 .mat-table {
-  overflow: auto;
-  max-height: none;
+  overflow-y: scroll;
+  max-height: 700px;
+}
+
+@media only screen and (max-height: 800px) {
+  .mat-table {
+    max-height: 560px;
+  }
 }
 
 .mobile-label {
