--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,10 +1,11 @@
+
 h3 {
   text-align: right;
   font-weight: bolder;
   font-size: 32px;
 }
 .about-container {
-  width: 100%;
+  width: 850px;
   padding: 1em;
   margin: 0 auto;
 }
@@ -12,4 +13,5 @@ h3 {
 p {
   font-size: 18px;
   line-height: 36px;
+  text-align: justify;
 }
