--- a/src/app/my-books/books/my-books.component.html
+++ b/src/app/my-books/books/my-books.component.html
@@ -10,17 +10,19 @@
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
   </div>
-  <ul class="books-list" *ngIf="books$ | async as books">
-    <li class="book-item" fxLayout="row" *ngFor="let book of books | filter: term; trackBy: getIdTrack">
-      <div class="book-cover">
-        <img *ngIf="book?.cover" src="{{book?.cover}}" alt="img" width="160">
-      </div>
-      <div class="book-details">
-        <h4>{{book.title}}</h4>
-        <a *ngIf="book?.article" target="_blank" href="{{book.article}}">בקורת על הספר</a>
-        <a *ngIf="book?.link" target="_blank" href="{{book.link}}">מידע נוסף</a>
-        <p>{{book.publisher}}, {{book.publication_year}}</p>
-      </div>
-    </li>
-  </ul>
+  <div class="books-list-container">
+    <ul class="books-list" *ngIf="books$ | async as books">
+      <li class="book-item" fxLayout="row" *ngFor="let book of books | filter: term; trackBy: getIdTrack">
+        <div class="book-cover">
+          <img *ngIf="book?.cover" src="{{book?.cover}}" alt="img" width="160">
+        </div>
+        <div class="book-details">
+          <h4>{{book.title}}</h4>
+          <a *ngIf="book?.article" target="_blank" href="{{book.article}}">בקורת על הספר</a>
+          <a *ngIf="book?.link" target="_blank" href="{{book.link}}">מידע נוסף</a>
+          <p>{{book.publisher}}, {{book.publication_year}}</p>
+        </div>
+      </li>
+    </ul>
+  </div>
 </div>
