--- a/src/app/video-lecture/video-lecture.component.css
+++ b/src/app/video-lecture/video-lecture.component.css
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+}
+
 .page-container {
   width: 100%;
   padding: 1em;
@@ -11,6 +15,26 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap:1.5em;
+  max-height: 700px;
+  overflow-y: scroll;
+}
+
+@media only screen and (max-width: 1300px) {
+  .videos-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .videos-container {
+    max-height: 640px;
+  }
+}
+
+@media only screen and (max-width: 970px) {
+  .videos-container {
+    grid-template-columns: 1fr;
+  }
 }
 
 h3 {
