--- a/src/app/admin/catalogs/catalogs.component.css
+++ b/src/app/admin/catalogs/catalogs.component.css
@@ -1,7 +1,8 @@
 .catalogs-container {
   width: 100%;
   margin: 0 auto;
-  padding: 24px;
+  max-height: 600px;
+  overflow-y: scroll;
 }
 
 .catalogs-title {
