--- a/src/app/catalogs/catalogs-list.component.html
+++ b/src/app/catalogs/catalogs-list.component.html
@@ -1,10 +1,9 @@
 <div class="catalogs-container" fxLayout="column">
-  <h3>קטלוגים</h3>
   <div class="search">
       <mat-form-field  class="input-search">
         <input type="text"
               matInput
-              placeholder="Search catalogs"
+              placeholder="חפש"
               style="width:100%"
               [(ngModel)]="term">
           <mat-icon matSuffix>search</mat-icon>
