--- a/src/app/video-lecture/video-lecture.component.css
+++ b/src/app/video-lecture/video-lecture.component.css
@@ -11,7 +11,7 @@
 .videos-container {
   width: 100%;
   margin: 0 auto;
-  padding: 1em;
+  padding: 3em 1em 1em 1em;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap:1.5em;
