--- a/src/app/todo-boards/board/board.component.css
+++ b/src/app/todo-boards/board/board.component.css
@@ -1,7 +1,7 @@
 .outer-card {
   margin: 10px;
-  min-width: 300px;
-  max-width: 300px;
+  min-width: 400px;
+  max-width: 400px;
   padding: 10px;
   background: #212121;
 }
@@ -13,16 +13,48 @@
   flex-direction: column;
 }
 
+.task-card {
+  display: flex;
+  flex-direction: row;
+}
+
+.task-description {
+  width: 70%
+}
+
+.task-actions {
+  width:30%
+}
+
 mat-card-header.mat-card-header {
   display: flex;
   width: 100%;
-  height: 60px;
+  height: 40px;
   justify-content: space-between;
+  align-items: center;
 }
 
+.mat-card-header .mat-card-title {
+  margin-bottom: 0;
+}
 
 .mat-card-header .mat-icon {
   cursor: pointer;
+  font-size: 16px;
+}
+
+.edit-btn.mat-icon-button {
+  background: #b15cff;
+  width: 36px;
+  height: 36px;
+}
+
+.mat-button-wrapper {
+  line-height: 36px;
+}
+
+.mat-icon-button {
+  line-height: 36px;
 }
 
 .inner-card {
