--- a/src/app/todo-boards/boards-list/boards-list.component.html
+++ b/src/app/todo-boards/boards-list/boards-list.component.html
@@ -1,20 +1,14 @@
 <div class="boards-container">
-  <div
-  class="boards"
-  cdkDropList
-  (cdkDropListDropped)="drop($event)"
-  cdkDropListOrientation="horizontal"
->
+  <h3 style="text-align: center">ToDo boards</h3>
+  <div class="boards" cdkDropList
+      (cdkDropListDropped)="drop($event)"
+      cdkDropListOrientation="horizontal">
   <app-board cdkDrag *ngFor="let board of boards" [board]="board">
     <mat-icon cdkDragHandle class="handle">drag_indicator</mat-icon>
   </app-board>
   <div class="board-button">
-    <button
-      mat-raised-button
-      color="accent"
-      cdkDragDisabled
-      (click)="createBoard()"
-    >
+    <button mat-raised-button color="accent"
+            cdkDragDisabled (click)="createBoard()">
       רשימה חדשה
     </button>
   </div>
