Final touch to navigation and added an image slideshow to home component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
 <div class="wrapper">
-  <img src="assets/images/illustration1.webp" alt="">
+  <img src="assets/images/illustration3_L.webp" class="carousel-pic w3-animate-fading" alt=""/>
+  <img src="assets/images/illustration1_L.webp" class="carousel-pic w3-animate-fading" alt=""/>
+  <img src="assets/images/illustration2_L.webp" class="carousel-pic w3-animate-fading" alt=""/>
 </div>
