--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -15,8 +15,33 @@
   width:100%;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
-.wrapper img {
+.carousel-pic {
   max-width: 640px;
 }
+
+.wrapper > img {
+  animation: 9s fading infinite linear;
+  position: absolute;
+  top: calc(((100vh - 92px) / 2) - 385px);
+  left: calc((100vw/2) - 300px);
+  opacity: 0.0;
+}
+
+.w3-animate-fading{
+  animation: fading 3s infinite;
+}
+
+@keyframes fading{
+  0% {opacity: 0.0}
+  4% {opacity: 1.0}
+  33.33% {opacity: 1.0}
+  37.33% {opacity: 0.0}
+  100% {opacity: 0.0}
+}
+
+.wrapper > .w3-animate-fading:nth-child(1) {animation-delay: 0s}
+.wrapper > .w3-animate-fading:nth-child(2) {animation-delay: 3s}
+.wrapper > .w3-animate-fading:nth-child(3) {animation-delay: 6s}
