--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -36,5 +36,5 @@
   </li>
 </ul>
 <div class="nav-logo">
-  <a href="/"><img src="assets/images/Aldus.jpg" alt="Festina lente image" title="Festina lente image"/></a>
+  <a href="/"><img src="assets/images/festina_L.webp" alt="Festina lente image" title="Festina lente image"/></a>
 </div>
